<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

  >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="40dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/colorlogo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:text="FPD"
                android:textAlignment="center"
                android:textColor="@color/whiteColor"
                android:textSize="25dp"
                android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/UNIVERSITYNAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="UNIVERSITY NAME"
                    android:inputType="none"
                    android:text="AMRITA VISHWA VIDYAPEETHAM"
                    android:textColorHint="@color/blackColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/STREAM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="STREAM"
                    android:inputType="textPostalAddress"
                    android:text="B.TECH"
                    android:textColorHint="@color/blackColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/FACULTYNAME1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/FACULTYNAME"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="FACULTY NAME "
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DEPARTMENT1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/DEPARTMENT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="DEPARTMENT "
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/INTEREST1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/INTEREST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="INTEREST "
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <Spinner
                android:id="@+id/course_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


            <Button
                android:id="@+id/search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="SEARCH"
                android:textSize="16dip" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>