<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="122dp"
            android:layout_height="122dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileimageview"
                android:layout_width="122dp"
                android:layout_height="122dp"/>
            <ProgressBar
                android:id="@+id/progressofimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/whiteColor" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Hindex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Hindex:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor" />

                <TextView
                    android:id="@+id/Hindexvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/I10index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="I10index:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor"
                    />

                <TextView
                    android:id="@+id/I10indexvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/CitedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="CitedBy:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor"
                    />

                <TextView
                    android:id="@+id/citedbyvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/whiteColor"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Spinner
        android:id="@+id/selection"
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_height="40dp" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/publicationslistview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            />

        <ListView
            android:id="@+id/areaofinterestlistview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        </ListView>
    </RelativeLayout>

</LinearLayout>
